src/test/resources/frontendReference/invalid/semanticErr/class/inheritance/subclassInit.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 24:2 -- Incompatible type at 'class1'. Expected type: CLASS e. Actual type: CLASS d.